<resources>
    <string name="app_name">Gitco\'s Attenance App</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome">WELCOME</string>
    <string name="next">Register</string>
    <string name="mobile_number">Email ID</string>
    <string name="enter_your_phone_number_to_get_started">Enter your phone number to get started</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="register">Register</string>
    <string name="total_employees">Total Employees</string>
    <string name="email_id">Email ID</string>
    <string name="admin_name">Admin Name</string>
    <string name="organization_name">Organization Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="punch_in">punch in</string>
</resources>