<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Register_page">

    <TextView
        android:id="@+id/enter_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/registration"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="phone"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/mobile_number"
        android:inputType="textEmailAddress"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="@+id/enter_phone_text"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/enter_phone_text"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_text" />

    <Button
        android:id="@+id/Register_page_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:textColor="#2FBDC5"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/registrationPassword"
        app:layout_constraintStart_toStartOf="@+id/registrationPassword"
        app:layout_constraintTop_toBottomOf="@+id/registrationPassword" />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#C8C8C8"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Have an account ?"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_page_button" />

    <Button
        android:id="@+id/bk_to_admin"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/home_button_background"
        android:text="login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.19999999" />

    <ProgressBar
        android:id="@+id/register_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>